<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.MSS301</groupId>
    <artifactId>mindmap</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>mindmap</name>
    <description>mindmap</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <!-- Override Elasticsearch client version to match server 8.15.0 -->
        <elasticsearch-client.version>8.15.0</elasticsearch-client.version>
    </properties>

    <modules>
        <module>eureka-server</module>
        <module>gateway-service</module>
        <module>auth-service</module>
        <module>profile-service</module>
        <module>content-service</module>
        <module>mindmap-service</module>
        <module>premium-service</module>
        <module>payment-service</module>
        <module>notification-service</module>
        <module>chatbot-service</module>
        <module>classroom-service</module>
        <module>document-service</module>
        <module>rag-service</module>
        <module>retrieval-service</module>
        <module>media-service</module>
    </modules>

    <!-- Common dependencies inherited by ALL child modules -->
    <dependencies>
        <!-- Spring Boot Actuator for health checks -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2025.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.30</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <removeUnusedImports />
                        <toggleOffOn />
                        <trimTrailingWhitespace />
                        <endWithNewline />
                        <indent>
                            <tabs>true</tabs>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>
                        <palantirJavaFormat />
                        <importOrder>
                            <!-- Specify either order or file, but not both -->
                            <order>java,jakarta,org,com,com.diffplug,</order>
                        </importOrder>
                    </java>
                </configuration>
                <!-- Temporarily disabled to prevent auto-formatting issues -->
                <!--
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                    </execution>
                </executions>
                -->
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>